@@ -1074,6 +1074,293 @@ int TrackerGOTURN(void *cd, Tcl_Interp *interp, int objc, Tcl_Obj *const*objv)
     return TCL_OK;
 }
 #endif
+
+#if CV_VERSION_GREATER_OR_EQUAL(4, 5, 3)
+static void TrackerDaSiamRPN_DESTRUCTOR(void *cd)
+{
+    Opencv_Data *cvd = (Opencv_Data *)cd;
+
+    if (cvd->trackerDaSiamRPN) {
+        cvd->trackerDaSiamRPN.release();
+    }
+    cvd->cmd_trackerDaSiamRPN = NULL;
+}
+
+
+static int TrackerDaSiamRPN_FUNCTION(void *cd, Tcl_Interp *interp, int objc, Tcl_Obj *const*objv)
+{
+    Opencv_Data *cvd = (Opencv_Data *)cd;
+    int choice;
+
+    static const char *FUNC_strs[] = {
+        "init",
+        "update",
+        "getTrackingScore",
+        "close",
+        "_command",
+        "_name",
+        "_type",
+        0
+    };
+
+    enum FUNC_enum {
+        FUNC_INIT,
+        FUNC_UPDATE,
+        FUNC_getTrackingScore,
+        FUNC_CLOSE,
+        FUNC__COMMAND,
+        FUNC__NAME,
+        FUNC__TYPE,
+    };
+
+    if (objc < 2) {
+        Tcl_WrongNumArgs(interp, 1, objv, "SUBCOMMAND ...");
+        return TCL_ERROR;
+    }
+
+    if (Tcl_GetIndexFromObj(interp, objv[1], FUNC_strs, "option", 0, &choice)) {
+        return TCL_ERROR;
+    }
+
+    if (cvd->trackerDaSiamRPN == nullptr) {
+        Opencv_SetResult(interp, cv::Error::StsNullPtr, "singleton not instantiated");
+        return TCL_ERROR;
+    }
+
+    switch ((enum FUNC_enum)choice) {
+        case FUNC_INIT: {
+            int x = 0, y = 0, width = 0, height = 0;
+            cv::Rect window;
+            cv::Mat *mat1;
+
+            if (objc != 7) {
+                Tcl_WrongNumArgs(interp, 2, objv, "matrix x y width height");
+                return TCL_ERROR;
+            }
+
+            mat1 = (cv::Mat *) Opencv_FindHandle(cd, interp, OPENCV_MAT, objv[2]);
+            if (!mat1) {
+                return TCL_ERROR;
+            }
+
+            if (Tcl_GetIntFromObj(interp, objv[3], &x) != TCL_OK) {
+                return TCL_ERROR;
+            }
+
+            if (Tcl_GetIntFromObj(interp, objv[4], &y) != TCL_OK) {
+                return TCL_ERROR;
+            }
+
+            if (Tcl_GetIntFromObj(interp, objv[5], &width) != TCL_OK) {
+                return TCL_ERROR;
+            }
+
+            if (Tcl_GetIntFromObj(interp, objv[6], &height) != TCL_OK) {
+                return TCL_ERROR;
+            }
+
+            try {
+                window = cv::Rect(x, y, width, height);
+                cvd->trackerDaSiamRPN->init(*mat1, window);
+            } catch (const cv::Exception &ex) {
+                return Opencv_Exc2Tcl(interp, &ex);
+            } catch (...) {
+                return Opencv_Exc2Tcl(interp, NULL);
+            }
+
+            break;
+        }
+        case FUNC_UPDATE: {
+            bool retval = false;
+            cv::Rect window;
+            cv::Mat *mat1;
+
+            if (objc != 3) {
+                Tcl_WrongNumArgs(interp, 2, objv, "matrix");
+                return TCL_ERROR;
+            }
+
+            mat1 = (cv::Mat *) Opencv_FindHandle(cd, interp, OPENCV_MAT, objv[2]);
+            if (!mat1) {
+                return TCL_ERROR;
+            }
+
+            try {
+                retval = cvd->trackerDaSiamRPN->update(*mat1, window);
+            } catch (const cv::Exception &ex) {
+                return Opencv_Exc2Tcl(interp, &ex);
+            } catch (...) {
+                return Opencv_Exc2Tcl(interp, NULL);
+            }
+
+            Tcl_Obj *list[5];
+
+            list[0] = Tcl_NewBooleanObj((int) retval);
+            list[1] = Tcl_NewIntObj(window.x);
+            list[2] = Tcl_NewIntObj(window.y);
+            list[3] = Tcl_NewIntObj(window.width);
+            list[4] = Tcl_NewIntObj(window.height);
+
+            Tcl_SetObjResult(interp, Tcl_NewListObj(5, list));
+
+            break;
+        }
+        case FUNC_getTrackingScore: {
+            double score = 0;
+
+            if (objc != 2) {
+                Tcl_WrongNumArgs(interp, 2, objv, 0);
+                return TCL_ERROR;
+            }
+
+            try {
+                score = cvd->trackerDaSiamRPN->getTrackingScore();
+            } catch (const cv::Exception &ex) {
+                return Opencv_Exc2Tcl(interp, &ex);
+            } catch (...) {
+                return Opencv_Exc2Tcl(interp, NULL);
+            }
+
+            Tcl_SetObjResult(interp, Tcl_NewDoubleObj(score));
+
+            break;
+        }
+        case FUNC_CLOSE: {
+            if (objc != 2) {
+                Tcl_WrongNumArgs(interp, 2, objv, 0);
+                return TCL_ERROR;
+            }
+
+            if (cvd->cmd_trackerDaSiamRPN) {
+                Tcl_DeleteCommandFromToken(interp, cvd->cmd_trackerDaSiamRPN);
+            }
+
+            break;
+        }
+        case FUNC__COMMAND:
+        case FUNC__NAME: {
+            Tcl_Obj *obj;
+            if (objc != 2) {
+                Tcl_WrongNumArgs(interp, 2, objv, 0);
+                return TCL_ERROR;
+            }
+
+            obj = Tcl_NewObj();
+            if (cvd->cmd_trackerDaSiamRPN) {
+                Tcl_GetCommandFullName(interp, cvd->cmd_trackerDaSiamRPN, obj);
+            }
+            Tcl_SetObjResult(interp, obj);
+            break;
+        }
+        case FUNC__TYPE: {
+            if (objc != 2) {
+                Tcl_WrongNumArgs(interp, 2, objv, 0);
+                return TCL_ERROR;
+            }
+
+            Tcl_SetResult(interp, (char *) "cv::TrackerDaSiamRPN", TCL_STATIC);
+            break;
+        }
+
+    }
+
+    return TCL_OK;
+}
+
+
+int TrackerDaSiamRPN(void *cd, Tcl_Interp *interp, int objc, Tcl_Obj *const*objv)
+{
+    Opencv_Data *cvd = (Opencv_Data *)cd;
+    Tcl_Obj *pResultStr = NULL;
+    cv::Ptr<cv::TrackerDaSiamRPN> trackerDaSiamRPN;
+    cv::TrackerDaSiamRPN::Params parameters = cv::TrackerDaSiamRPN::Params();
+    char *zArg = NULL;
+
+   if ((objc&1) != 1) {
+        Tcl_WrongNumArgs(interp, 1, objv, "?-model value? ?-kernel_cls1 value? ?-kernel_r1 value? ?-backend value? ?-target value?");
+        return TCL_ERROR;
+    }
+
+    for (int i = 1; i + 1 < objc; i += 2) {
+        zArg = Tcl_GetString(objv[i]);
+
+        if (strcmp(zArg, "-model") == 0) {
+            char *model;
+            int len = 0;
+
+            model = Tcl_GetStringFromObj(objv[i+1], &len);
+            if (len < 1) {
+                return Opencv_SetResult(interp, cv::Error::StsBadArg, "invalid model");
+            }
+
+            parameters.model = model;
+        } else if (strcmp(zArg, "-kernel_cls1") == 0) {
+            char *kernel_cls1;
+            int len = 0;
+
+            kernel_cls1 = Tcl_GetStringFromObj(objv[i+1], &len);
+            if (len < 1) {
+                return Opencv_SetResult(interp, cv::Error::StsBadArg, "invalid kernel_cls1");
+            }
+
+            parameters.kernel_cls1 = kernel_cls1;
+        } else if (strcmp(zArg, "-kernel_r1") == 0) {
+            char *kernel_r1;
+            int len = 0;
+
+            kernel_r1 = Tcl_GetStringFromObj(objv[i+1], &len);
+            if (len < 1) {
+                return Opencv_SetResult(interp, cv::Error::StsBadArg, "invalid kernel_r1");
+            }
+
+            parameters.kernel_r1 = kernel_r1;
+        } else if (strcmp(zArg, "-backend") == 0) {
+            int value = 0;
+            if (Tcl_GetIntFromObj(interp, objv[i+1], &value) != TCL_OK) {
+                return TCL_ERROR;
+            }
+
+            parameters.backend = value;
+        } else if (strcmp(zArg, "-target") == 0) {
+            int value = 0;
+            if (Tcl_GetIntFromObj(interp, objv[i+1], &value) != TCL_OK) {
+                return TCL_ERROR;
+            }
+
+            parameters.target = value;
+        } else {
+            return Opencv_SetResult(interp, cv::Error::StsBadArg, "invalid parameter");
+        }
+    }
+
+    try {
+        trackerDaSiamRPN = cv::TrackerDaSiamRPN::create(parameters);
+
+        if (trackerDaSiamRPN == nullptr) {
+            CV_Error(cv::Error::StsNullPtr, "TrackerDaSiamRPN nullptr");
+        }
+    } catch (const cv::Exception &ex) {
+        return Opencv_Exc2Tcl(interp, &ex);
+    } catch (...) {
+        return Opencv_Exc2Tcl(interp, NULL);
+    }
+
+    pResultStr = Tcl_NewStringObj("::cv-trackerDaSiamRPN", -1);
+
+    if (cvd->cmd_trackerDaSiamRPN) {
+        Tcl_DeleteCommandFromToken(interp, cvd->cmd_trackerDaSiamRPN);
+    }
+    cvd->cmd_trackerDaSiamRPN =
+        Tcl_CreateObjCommand(interp, "::cv-trackerDaSiamRPN",
+            (Tcl_ObjCmdProc *) TrackerDaSiamRPN_FUNCTION,
+            cd, (Tcl_CmdDeleteProc *) TrackerDaSiamRPN_DESTRUCTOR);
+
+    cvd->trackerDaSiamRPN = trackerDaSiamRPN;
+
+    Tcl_SetObjResult(interp, pResultStr);
+    return TCL_OK;
+}
+#endif
 #endif
 
 
